--- a/content/posts/career/개발자 취업 팁 모음.md
+++ b/content/posts/career/개발자 취업 팁 모음.md
@@ -2,28 +2,33 @@
 title: 개발자 취업 팁 모음
 date: 2025-02-10
 categories:
-  - Career
+  - 커리어
 tags:
   - Career
 ---
+
 > 취업 관련 정보들을 정리한 문서. 계속 업데이트
+
 ## 이렇게 하면 서류 불합격
+
 [링크](https://www.youtube.com/watch?v=HJNHySXDKmU&ab_channel=%EC%BD%94%EB%94%A9%EA%B5%AD%EC%88%98)
 
 1. 강점 X 이력서
-처음 소개칸. 자신의 강점이 초반부터 드러나야한다. 수많은 지원서를 면접관들은 평균 7초만 본다고함. 구체적 사례. 직우메 해당하는 강점과 연관시킬것
+   처음 소개칸. 자신의 강점이 초반부터 드러나야한다. 수많은 지원서를 면접관들은 평균 7초만 본다고함. 구체적 사례. 직우메 해당하는 강점과 연관시킬것
 2. 단순 나열 기술은 별로
-예를들어 api32개 구현 이런거 별로. 플젝하면서 어떤 어려움을 겪었고 어떻게 해결했는지? 위기-> 극복.
+   예를들어 api32개 구현 이런거 별로. 플젝하면서 어떤 어려움을 겪었고 어떻게 해결했는지? 위기-> 극복.
 3. 시간순서대로 나열된거 별로
-가장 자신있는 플젝을 제일 위로. 결국 이것도 초반 임팩트 문제
+   가장 자신있는 플젝을 제일 위로. 결국 이것도 초반 임팩트 문제
 4. 너무 긴 줄글 별로
-짧고 간결하게 수치로. 긴 글은 읽기 힘들다. 보는 사람을 생각할 것. 내꺼만 보는게 아님
+   짧고 간결하게 수치로. 긴 글은 읽기 힘들다. 보는 사람을 생각할 것. 내꺼만 보는게 아님
 5. 특이한 포맷, 글씨체 x
-가독성 떨어진다. simple is best
+   가독성 떨어진다. simple is best
 6. 단점 노출
-학점, 비전공 이런거 필수아니면 숨기기. 요구하는게 아니면 굳이 표시하지 말기
+   학점, 비전공 이런거 필수아니면 숨기기. 요구하는게 아니면 굳이 표시하지 말기
 7. 일관성 없는 것
+
 ## 개발자 이력서에 자주 빠지는 내용들
+
 [링크](https://www.youtube.com/watch?v=fz5g-8P3qRc&list=PL97nOgtbO-dSzzbOx3Gdz08Q5xXVDDGSl&index=2&ab_channel=NewLearning%EB%89%B4%EB%9F%AC%EB%8B%9D))
 
 - 다른 사람들과의 협업 경험. 특히 신입의 경우 다른 사람과 소통이 중요. 소통이 없었다는 느낌이 나면 기업입장에서 걱정
@@ -31,10 +36,12 @@ tags:
 - 실적... 흠... 기존에는 시간1시간걸리는걸 같은일을 30분만에 가능하다. 이걸 수치로 표시하기
 
 ## 요즘 개발자 면접에서 모르면 손해보는 3가지
+
 [링크](https://www.youtube.com/watch?v=66hZFp3HBS8&list=PL97nOgtbO-dSzzbOx3Gdz08Q5xXVDDGSl&index=4&ab_channel=%EB%A9%94%ED%83%80%EC%BD%94%EB%93%9CM)
 
 - JD 의 중요성. 기본적 역량은 없어보이는데 사용자 관점에서 개발할 줄 아는 사람을 뽑는 경우도 존재
 - 학습 능력, 학습 의지, 열정. 당장은 미흡해도 어려움을 극복하고 습득 가능한가? 본인만의 공부법
 - 내가 서비스의 한 축을 담당했을때 고객을 고려하는 사람?
-1. 역량적인 부분에서 기본적인 지식 
+
+1. 역량적인 부분에서 기본적인 지식
 2. 컬쳐핏
