--- a/content/posts/career/주니어의 공부.md
+++ b/content/posts/career/주니어의 공부.md
@@ -1,35 +1,42 @@
 ---
 title: 신입/주니어 개발자 공부 전략
 date: 2025-02-11
-category: Career
+categories:
+  - 커리어
 tags:
   - Career
 ---
+
 > 쉬운코드 유튜브 영상 정리
 > Ep.2 신입 혹은 주니어 개발자는 개발 공부 뭐부터 해야 할까?
 > https://www.youtube.com/watch?v=XWuq5omgCg8&ab_channel=%EC%89%AC%EC%9A%B4%EC%BD%94%EB%93%9C
 
 ## 필요한 것 부터 공부
+
 1. 당장 모르면 업무에 지장이 있는 개념이나 기술부터 공부
-   - 기능을 구현할 수 있을 만큼 공부. 당작 티켓을 처리해야 함.
-   - 서비스 도메인 지식을 알아야 개발이 잘 될거 같으면, 당연히 도메인관련 지식을 정리하고 개발을 해야된다. 
+    - 기능을 구현할 수 있을 만큼 공부. 당작 티켓을 처리해야 함.
+    - 서비스 도메인 지식을 알아야 개발이 잘 될거 같으면, 당연히 도메인관련 지식을 정리하고 개발을 해야된다.
 2. 기술 스택 중에 내 업무와 직접적으로 관련있는 기술부터 공부
-   - 잘 알아야 효율적으로 개발 할 수 있고, 견고한 프로덕트 만들 수 있다. 
-   - 회사에서 안 쓰는 기술 혹은 내 업무와 무관한것은 개념 파악만 하고 스킵하자.
+    - 잘 알아야 효율적으로 개발 할 수 있고, 견고한 프로덕트 만들 수 있다.
+    - 회사에서 안 쓰는 기술 혹은 내 업무와 무관한것은 개념 파악만 하고 스킵하자.
 3. 미팅, 대화 중에 자주 등장하는 용어부터 개념 공부
-   - 자주 등장한다? 그만큼 중요하기 때문임.
+    - 자주 등장한다? 그만큼 중요하기 때문임.
 4. 안정적인 서비스 운영을 위해 필요한 지식들 공부
-   - 서버 애플리케이션 모니터링이 특히 중요
-     - 어떻게 그 회사가 모니터링하는지 팔로업
-     - 대규모 이벤트 준비 시 시니어가 어떻게 준비하고 모니터링 하는지
-     - 모니터링 해야할 지표가 무엇이 있고 그것을 왜 모니터링 해야하는지
-     - 서버 애플리케이션 문제 발생시 원인 추적/분석할 수 있는지
-     - 시니어 개발자로부터 배우는 자세
+    - 서버 애플리케이션 모니터링이 특히 중요
+        - 어떻게 그 회사가 모니터링하는지 팔로업
+        - 대규모 이벤트 준비 시 시니어가 어떻게 준비하고 모니터링 하는지
+        - 모니터링 해야할 지표가 무엇이 있고 그것을 왜 모니터링 해야하는지
+        - 서버 애플리케이션 문제 발생시 원인 추적/분석할 수 있는지
+        - 시니어 개발자로부터 배우는 자세
+
 ## 필요한 것부터 공부시 단점
+
 1. 하고 싶은 공부보다 해야하는 공부를 하는 느낌이라서 자신과의 싸움이 필요
 2. 조각난 지식으로 존재할 가능성 존재 -> 언젠가는 시간내어 전체적 공부가 필요함
 3. 위 방법은 취직한 상태를 전재로 함. (취직하려면 어떻게 하지요 ㅜ )
+
 ## 필요한 것부터 공부시 장점
+
 1. 현장에서 필요한 지식 위주로 공부하기에 기술적 온보딩이 빠르다.
 2. 기억에 오래 남는다.
 3. 판단력이 향상됨.
