--- a/content/posts/self-improvement/함수형인터페이스 사용 이유.md
+++ b/content/posts/self-improvement/함수형인터페이스 사용 이유.md
@@ -3,11 +3,15 @@ title: 함수형 인터페이스 사용 이유
 tags:
   - Java
 date: 2024-06-30
+categories:
+  - 공부
 ---
+
 # Java에서 함수형 인터페이스 왜 사용?
 
-1. **람다 표현식의 사용**: 함수형 인터페이스는 단 하나의 추상 메서드만을 가지므로, 이를 통해 람다 표현식을 사용할 수 있습니다. 람다 표현식은 간결한 코드 작성을 가능하게 하고, 익명 내부 클래스의 번잡함을 줄여줍니다.
-   
+1. **람다 표현식의 사용**: 함수형 인터페이스는 단 하나의 추상 메서드만을 가지므로, 이를 통해 람다 표현식을 사용할 수 있습니다. 람다 표현식은 간결한 코드 작성을 가능하게 하고, 익명 내부 클래스의 번잡함을
+   줄여줍니다.
+
    ```java
    // 함수형 인터페이스
    @FunctionalInterface
@@ -35,7 +39,8 @@ date: 2024-06-30
    new Thread(() -> System.out.println("Thread is running")).start();
    ```
 
-3. **지연 연산 및 스트림 처리**: 자바 8에서 도입된 스트림 API와 함께 사용되며, 지연 연산(lazy evaluation)을 통해 성능을 최적화할 수 있습니다. 함수형 인터페이스는 스트림 연산 (map, filter, reduce 등)에서 중요한 역할을 합니다.
+3. **지연 연산 및 스트림 처리**: 자바 8에서 도입된 스트림 API와 함께 사용되며, 지연 연산(lazy evaluation)을 통해 성능을 최적화할 수 있습니다. 함수형 인터페이스는 스트림 연산 (map,
+   filter, reduce 등)에서 중요한 역할을 합니다.
 
    ```java
    List<String> names = Arrays.asList("Alice", "Bob", "Charlie");
@@ -44,7 +49,8 @@ date: 2024-06-30
                                      .collect(Collectors.toList());
    ```
 
-4. **병렬 처리의 용이성**: 스트림 API를 통해 함수형 인터페이스를 사용하면 병렬 처리를 더 쉽게 구현할 수 있습니다. `parallelStream()` 메서드를 사용하면 간단하게 병렬 스트림을 생성할 수 있습니다.
+4. **병렬 처리의 용이성**: 스트림 API를 통해 함수형 인터페이스를 사용하면 병렬 처리를 더 쉽게 구현할 수 있습니다. `parallelStream()` 메서드를 사용하면 간단하게 병렬 스트림을 생성할 수
+   있습니다.
 
    ```java
    List<String> names = Arrays.asList("Alice", "Bob", "Charlie");
@@ -67,6 +73,6 @@ date: 2024-06-30
    assert add.calculate(2, 3) == 5;
    ```
 
-6. **기능의 모듈화**: 함수형 인터페이스를 사용하면 코드를 더 모듈화할 수 있으며, 재사용성과 유지보수성을 높일 수 있습니다. 
+6. **기능의 모듈화**: 함수형 인터페이스를 사용하면 코드를 더 모듈화할 수 있으며, 재사용성과 유지보수성을 높일 수 있습니다.
 
 이러한 이유들 때문에 함수형 인터페이스는 자바에서 매우 유용하게 사용됩니다. 특히 자바 8 이후로 함수형 프로그래밍 패러다임이 강조되면서 함수형 인터페이스의 중요성은 더욱 커졌습니다.
