docs: 이전 이미지 가져와서 이미지 나오도록 수정

--- a/content/posts/career/개발자 취업 팁 모음.md
+++ b/content/posts/career/개발자 취업 팁 모음.md
@@ -1,10 +1,10 @@
 ---
 title: 개발자 취업 팁 모음
 date: 2025-02-10
-categories:
-  - 커리어
+categories: 커리어
 tags:
   - Career
+summary: 유튜브 보고 정리한 팁들
 ---
 
 > 취업 관련 정보들을 정리한 문서. 계속 업데이트
