--- a/content/posts/career/신입 혹은 주니어 개발자는 어디까지 깊게 공부해야 할까?.md
+++ b/content/posts/career/신입 혹은 주니어 개발자는 어디까지 깊게 공부해야 할까?.md
@@ -1,11 +1,11 @@
 ---
 date: 2025-02-15
-categories:
-  - 커리어
+categories: 커리어
 tags:
   - Career
   - 공부전략
 title: 신입 혹은 주니어 개발자는 어디까지 깊게 공부해야 할까?
+summary: 쉬운코드님의 유튜브를 보며 정리한 내용
 ---
 
 > 쉬운코드님의 유튜브를 보며 정리한 내용 [링크](https://www.youtube.com/live/irY24LV_4U4?si=EZMLTgcCz8jjJYv1)
