--- a/content/posts/self-improvement/동기화 3대장.md
+++ b/content/posts/self-improvement/동기화 3대장.md
@@ -2,9 +2,10 @@
 title: 동기화 3대장(스핀락, 뮤텍스, 세마포)
 tags:
   - OS
+  - Sync
+  - Lock
 date: 2024-05-14
-categories:
-  - 공부
+categories: 공부
 ---
 
 - race condition (경쟁 조건) : 여러 스레드가 동시에 어떤 공유 데이터를 조작할 때 타이밍이나 접근 순서에 따라 결과가 달라질 수 있는 상황
