--- a/content/posts/self-improvement/카카오페이가 수천만 결제를 처리하는 방법.md
+++ b/content/posts/self-improvement/카카오페이가 수천만 결제를 처리하는 방법.md
@@ -1,13 +1,15 @@
 ---
-title: 카카오-카카오페이가 수천만 결제를 처리하는 방법(분산락)
+title: 카카오페이가 수천만 결제를 처리하는 방법
 tags:
   - Concurrency
   - Lock
+  - Study
+  - Kakao
 date: 2024-11-08
-categories:
-  - 공부
+categories: 공부
+summary: 카카오 테크에서 진행한 분산락 활용 소개 정리
 ---
-
+> https://www.youtube.com/watch?v=4wGTavSyLxE&ab_channel=kakaotech
 ## 카카오페이 상황
 
 - 매년 10억건이 넘는 결제 트랜젝션 처리
@@ -15,7 +17,7 @@ categories:
 ## 피할 수 없는 동시성 이슈
 
 - 공유되는 자원을 동시에 접근하며 할생하는 문제 -> 동시성 이슈
-  ![[../images/Pasted image 20241108004452.png]]
+  ![](Pasted%20image%2020241108004452.png#center)
 
 - 5000 원 업데이트가 사라짐
 - 간단한 시스템에서는 DB의 기본락만으로도 해결가능하지만 카카오급에서는 불가함(왜?)
@@ -23,10 +25,10 @@ categories:
 ## 동시성 이슈 해결사! 분산락(Distributed Lock)
 
 - 분산락: 분산된 여러 시스템이 하나의 공유 자원을 안전하게 접근할 수 있도록 사용하는 동기화 메커니즘
-  ![[../images/SCR-20241108-brse.png]]
+  ![](SCR-20241108-brse.png#center)
 - 대표적 인프라: redis 있고 redis를 분산락으로 쓸 수 있도록 도와주는 redisson 이 있음
 - 분산락 적용후의 모습
-  ![[../images/SCR-20241108-bsme.png]]
+![](SCR-20241108-bsme.png#center)
 - 그런데 이거 그냥 DB에 락거는거랑 무슨차이지? 그냥 동기화 시켜주는것 같아보이는데.
 
 ## 카카오페이의 분산락 적용
@@ -56,7 +58,3 @@ categories:
 - 모르는 용어들 꽤 나와 좋았음. 공부해보기.
 - 함수형 프로그래밍이 AOP 보다 미세히 컨트롤 할 수 있는 장점이 존재하는것으로 보임.
 - AOP를 활용할때는 String 을 그대로 쓰는경우가 많아서 HumanError 가능성이 있는 반면 함수형 프로그래밍은 순수 code로 이루어져 실수 가능성이 덜 하다.
-
-## 참고자료
-
-- https://www.youtube.com/watch?v=4wGTavSyLxE&ab_channel=kakaotech
