chore: 한 페이지에 다 글이 보이도록하고, 가치없어 보이는글 삭제혹은 초안으로 변경

--- a/content/posts/career/신입 혹은 주니어 개발자는 어디까지 깊게 공부해야 할까?.md
+++ b/content/posts/career/신입 혹은 주니어 개발자는 어디까지 깊게 공부해야 할까?.md
@@ -6,6 +6,7 @@ tags:
   - 공부전략
 title: 신입 혹은 주니어 개발자는 어디까지 깊게 공부해야 할까?
 summary: 쉬운코드님의 유튜브를 보며 정리한 내용
+draft: "true"
 ---
 
 > 쉬운코드님의 유튜브를 보며 정리한 내용 [링크](https://www.youtube.com/live/irY24LV_4U4?si=EZMLTgcCz8jjJYv1)
